bug fix met dark mode button

--- a/goaltunes/src/app/app.component.scss
+++ b/goaltunes/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .theme-switch {
   position: absolute;
-  bottom: 10px;
+  bottom: 2%;
   right: 10px;
   z-index: 100;
   /* Additional styling for the button */
