--- a/goaltunes/src/app/play-screen/play-screen.component.scss
+++ b/goaltunes/src/app/play-screen/play-screen.component.scss
@@ -2,8 +2,12 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column; /* Add this */
-  align-items: center;    /* Add this */
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    color: var(--text-color);
+  }
 }
 
 .grid-container {
