--- a/goaltunes/src/styles.scss
+++ b/goaltunes/src/styles.scss
@@ -34,7 +34,7 @@ app-root {
 }
 
 html, body {
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
